--- a/macos/firebase_app_id_file.json
+++ b/macos/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:586685365516:ios:f8d7f124a781ec6a709d29",
-  "FIREBASE_PROJECT_ID": "cinemax-1dabb",
-  "GCM_SENDER_ID": "586685365516"
+  "GOOGLE_APP_ID": "1:592603934040:ios:4f7a3a443f7a7069a9492d",
+  "FIREBASE_PROJECT_ID": "tickets-678e1",
+  "GCM_SENDER_ID": "592603934040"
 }
