--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   cupertino_icons: ^1.0.2
   cloud_firestore: ^3.4.9
   firebase_core: ^1.23.0
+  provider: ^6.0.0
+  flutter_spinkit: ^5.1.0
+  get: ^4.6.5
+  firebase_auth: ^3.11.2
+  image_picker: ^0.8.6
+  flutterwave: ^1.0.3
 
 dev_dependencies:
   flutter_test:
@@ -50,8 +56,8 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   firebase_storage: ^10.3.9
-  firebase_core: ^1.23.0
-  get: ^4.6.5
+
+
 
 
 # For information on the generic Dart part of this file, see the
