--- a/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=C:\Users\Ian Wasukira\OneDrive\Desktop\Main\flutter_windows_3.3.0-stable\flutter
-FLUTTER_APPLICATION_PATH=C:\Users\Ian Wasukira\OneDrive\Desktop\Cinemax
+FLUTTER_ROOT=C:\flutter
+FLUTTER_APPLICATION_PATH=C:\Users\kakem\Desktop\Tickets_plus\centuary_max
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
