--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.0-146.2.beta <3.0.0'
+  sdk: '>=2.18.2 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -42,6 +42,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   get: ^4.6.5
   firebase_auth: ^3.11.2
+  dynamic_themes: ^1.1.0
   image_picker: ^0.8.6
   flutterwave: ^1.0.3
 
